@@ -43,7 +43,7 @@ jobs:
         draft: true
         prerelease: false
 
-    - name: Upload Release Asset for Linux
+    - name: Upload Release Asset for Linux (amd64)
       id: upload-release-asset-for-linux
       uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 # v1.0.2
       if: startsWith(github.ref, 'refs/tags/')
@@ -53,6 +53,18 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./dist/fmcsadmin-${{ steps.version.outputs.version }}-linux.tar.gz
         asset_name: fmcsadmin-${{ steps.version.outputs.version }}-linux.tar.gz
+        asset_content_type: application/gzip
+
+    - name: Upload Release Asset for Linux (arm64)
+      id: upload-release-asset-for-linux-arm64
+      uses: actions/upload-release-asset@e8f9f06c4b078e705bd2ea027f0926603fc9b4d5 # v1.0.2
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/fmcsadmin-${{ steps.version.outputs.version }}-linux-arm64.tar.gz
+        asset_name: fmcsadmin-${{ steps.version.outputs.version }}-linux-arm64.tar.gz
         asset_content_type: application/gzip
 
     - name: Upload Release Asset for Windows (x64)
