@@ -3,8 +3,9 @@ fmcsadmin
 This software is distributed under the Apache License, Version 2.0, see LICENSE.txt and NOTICE.txt for more information.
 
 Version: 2.2.0 (in development)
-- Tested with Claris FileMaker Server 2023 (20.1).
-- Add support for Ubuntu 22.04 LTS.
+- Add support for Claris FileMaker Server 2023 (20.1).
+- Add support for Ubuntu 22.04 LTS (on amd64 architecture).
+- Add support for Ubuntu 22.04 LTS on arm64 architecture.
 - Add support for Windows Server 2019 and Windows Server 2022.
 - Built with Go 1.20.
 - [INFO] Drop support for Claris FileMaker Server 19.3.
